--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,23 @@ dist.jar=${dist.dir}/BVCB.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-lang-2.6.jar=C:\\Users\\Kelok\\Videos\\New folder\\commons-lang-2.6.jar
+file.reference.commons-logging-1.1.1.jar=C:\\Users\\Kelok\\Videos\\New folder\\commons-logging-1.1.1.jar
 file.reference.derbyclient.jar=../../../Downloads/derbyclient.jar
+file.reference.hsqldb.jar=C:\\Users\\Kelok\\Videos\\New folder\\hsqldb.jar
+file.reference.jackcess-2.0.8.jar=C:\\Users\\Kelok\\Videos\\New folder\\jackcess-2.0.8.jar
 file.reference.rs2xml.jar=C:\\Users\\Kelok\\Downloads\\rs2xml.jar
+file.reference.ucanaccess-2.0.9.4.jar=C:\\Users\\Kelok\\Videos\\New folder\\ucanaccess-2.0.9.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.derbyclient.jar}:\
-    ${file.reference.rs2xml.jar}
+    ${file.reference.rs2xml.jar}:\
+    ${file.reference.commons-lang-2.6.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.hsqldb.jar}:\
+    ${file.reference.jackcess-2.0.8.jar}:\
+    ${file.reference.ucanaccess-2.0.9.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,7 +69,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=vet.Login
+main.class=UI.Login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
