--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,9 @@ file.reference.commons-lang-2.6.jar=C:\\Users\\Kelok\\Videos\\New folder\\common
 file.reference.commons-logging-1.1.1.jar=C:\\Users\\Kelok\\Videos\\New folder\\commons-logging-1.1.1.jar
 file.reference.derbyclient.jar=../../../Downloads/derbyclient.jar
 file.reference.hsqldb.jar=C:\\Users\\Kelok\\Videos\\New folder\\hsqldb.jar
-file.reference.jackcess-2.0.8.jar=C:\\Users\\Kelok\\Videos\\New folder\\jackcess-2.0.8.jar
+file.reference.jackcess-2.1.2.jar=Libraries\\jackcess-2.1.2.jar
+file.reference.jcalendar-1.4.jar=Libraries/jcalendar-1.4.jar
+file.reference.jdatepicker-1.3.4.jar=C:\\Users\\Kelok\\Downloads\\jdatepicker-1.3.4.jar
 file.reference.rs2xml.jar=C:\\Users\\Kelok\\Downloads\\rs2xml.jar
 file.reference.ucanaccess-2.0.9.4.jar=C:\\Users\\Kelok\\Videos\\New folder\\ucanaccess-2.0.9.4.jar
 includes=**
@@ -44,8 +46,11 @@ javac.classpath=\
     ${file.reference.commons-lang-2.6.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
     ${file.reference.hsqldb.jar}:\
-    ${file.reference.jackcess-2.0.8.jar}:\
-    ${file.reference.ucanaccess-2.0.9.4.jar}
+    ${file.reference.ucanaccess-2.0.9.4.jar}:\
+    ${file.reference.jdatepicker-1.3.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jackcess-2.1.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -73,7 +78,7 @@ main.class=UI.Login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
